# CMakeProjectStarter

./: .gitignore  CMakeLists.txt  README.md  atom.yml  build.bat
src/: CMakeLists.txt
src/DTUion/: CMakeLists.txt  test.cpp
